--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "my-app",
+  "name": "vdart-client-satisfaction-dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://sugils.github.io/VDart-Client-Satisfaction-Dashboard",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "lucide-react": "^0.525.0",
@@ -25,6 +28,7 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
